[package]
name = "num-to-words-de"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Convert a u32 Integer into its String equivalent in the German Language"
repository = "https://github.com/chooklii/num-to-words-de"
readme = "README.md"
homepage = "https://bzenth.de"
keywords = ["Integer", "convert", "deutsch", "String", "German"]
categories = ["encoding", "internationalization"]

[dependencies]
regex = "1.11.1"
